--- a/socialapp/posts/templates/posts/create.html
+++ b/socialapp/posts/templates/posts/create.html
@@ -3,6 +3,6 @@
 <form method="POST" enctype="multipart/form-data">
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit">Post</button>
+    <button type="submit" class="font-semibold text-lg">Post</button>
 </form>
 {% endblock %}
