--- a/socialapp/users/static/users/tw.css
+++ b/socialapp/users/static/users/tw.css
@@ -1,3 +1,10 @@
+/* tw.css */
+
+/* Include Tailwind's base styles */
 @tailwind base;
+
+/* Include Tailwind's component styles */
 @tailwind components;
+
+/* Include Tailwind's utility styles */
 @tailwind utilities;
