--- a/socialapp/users/templates/users/base.html
+++ b/socialapp/users/templates/users/base.html
@@ -4,26 +4,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{% static 'users/styles.css' %}">
+    <link rel="stylesheet" href="{% static "users/styles.css" %}">
     <title>{% block title %}{% endblock %}</title>
 </head>
-<body>  
-    <nav>
-        <div>
-            <div>
-                <a href="">
-                    <img class="h-8 w-8" src="{% static "users/images/logo.png" %}" alt="">
-                    <span>Photo App</span>
-                </a>
+<body class="bg-gray-100">  
+    <nav class="shadow-lg bg-white z-10">
+        <div class="px-10 py-5 mx-auto">
+            <div class="flex justify-between items-center">
+                {% comment %} Logo {% endcomment %}
+                <div>
+                    <a href="{% url 'index' %}" class="flex items-center">
+                        <img class="h-8 w-8 mr-2" src="{% static "users/images/logo.png" %}" alt="Logo">
+                        <span class="font-semibold text-lg text-gray-500">Photo App</span>
+                    </a>
+                </div>
+                {% comment %} Nav items {% endcomment %}
+                <div class="space-x-4">
+                    {% if request.user.is_authenticated %}
+                        <a href="{% url "logout" %}" class="py-2 px-3 text-gray-500 font-semibold hover:text-gray-800">Logout</a>
+                    {% else %}
+                        <a href="{% url "login" %}" class="py-2 px-3 text-gray-500 font-semibold hover:text-gray-800">Login</a>
+                    {% endif %}
+                    <a href="#" class="py-2 px-3 text-gray-500 font-semibold hover:text-gray-800">Link 3</a>
+                </div>
             </div>
         </div>
     </nav>
-        {% if request.user.is_authenticated %}
-        <a href="{% url "logout" %}">Logout</a>
-        {% else %}
-        <a href="{% url "login" %}">Login</a>
-        {% endif %}
-    {% block container %}
-    {% endblock %}
+    <div class="container mx-auto px-4 py-6">
+        {% block container %}
+        {% endblock %}
+    </div>
 </body>
 </html>
