--- a/socialapp/users/templates/users/index.html
+++ b/socialapp/users/templates/users/index.html
@@ -1,9 +1,34 @@
 {% extends "users/base.html" %}
+{% load static %}
 {% block container %}
-<h1>Index</h1>
-{% for post in posts %}
-    <h1>{{ post.title }}</h1>
-    <h2>{{ post.user }}</h2>
-    <img src="{{post.image.url}}" alt="Shit" width="200px">
+<div class="flex mt-5 p-10 justify-center">
+    <h2 class="text-3xl font-normal mb-2 text-gray-500">My Posts</h2>
+</div>
+<div class="grid mx-80 p-10 grid-cols-1">
+    {% for post in posts %}
+    <!-- Cards start -->
+    <a href="">
+        <div class="rounded overflow-hidden w-[470px] h-[470-px] bg-white shadow-lg">
+        <div class="user-container flex mx-5 my-5">
+            <img src="{{profile.photo.url}}" alt="" class="w-10 h-10 rounded-full">
+            <div class="mx-2 my-2 font-bold"><span class="text-indigo-500">{{post.user}}</span></div>
+        </div>
+            <img src="{{post.image.url}}" alt="">
+        </div>
+        <div class="px-6 py-4">
+            <div class="icon-container flex gap-3">
+                <img src="{% static "users/images/like.png" %}" alt="" class="w-7 h-7">
+                <img src="{% static "users/images/comment.png" %}" alt="" class="w-7 h-7">
+                <img src="{% static "users/images/share.png" %}" alt="" class="w-7 h-7">
+            </div>
+        </div>
+        <div class="px-6 py-4">
+            <div class="font-bold text-2xl mb-2">{{post.title}}</div>
+            <p class="text-gray-700 text-base">{{post.caption}}</p>
+        </div>
+    </a>
+    <!-- Cards End -->
+
 {% endfor %}
+</div>
 {% endblock %}
