--- a/socialapp/users/templates/users/base.html
+++ b/socialapp/users/templates/users/base.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{% static "users/styles.css" %}">
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
     <title>{% block title %}{% endblock %}</title>
 </head>
 <body class="bg-gray-100">  
@@ -34,5 +35,6 @@
         {% block container %}
         {% endblock %}
     </div>
+    
 </body>
 </html>
